--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ef9176">  <td>18/10/24 18:16:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MouseHover.setUp()[pri:0, instance:com.qa.test.MouseHover@610694f1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280744458</td>   <td></td> </tr>
-<tr bgcolor="ef9176">  <td>18/10/24 18:16:32</td>   <td>7921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MouseHover.testKeyPress()[pri:0, instance:com.qa.test.MouseHover@610694f1]">testKeyPress</td> 
-  <td>main@280744458</td>   <td></td> </tr>
-<tr bgcolor="ef9176">  <td>18/10/24 18:17:00</td>   <td>36117</td> <td>&nbsp;</td><td title="&lt;&lt;MouseHover.tearDown()[pri:0, instance:com.qa.test.MouseHover@610694f1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280744458</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>18/10/30 18:59:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;sample.setup()[pri:0, instance:com.qa.test.sample@49fc609f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@94264799</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>18/10/30 18:59:32</td>   <td>18131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="sample.downloadfile()[pri:0, instance:com.qa.test.sample@49fc609f]">downloadfile</td> 
+  <td>main@94264799</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>18/10/30 18:59:33</td>   <td>19084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;sample.teardown()[pri:0, instance:com.qa.test.sample@49fc609f]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@94264799</td>   <td></td> </tr>
 </table>
